--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
+:root {
+  color-scheme: dark;
+  background-color: #000;
+  color: #fff;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
+}
 export default function Home() {
   return (
     <main className="min-h-screen flex flex-col items-center justify-center bg-black text-white px-4">
